Related-Bug: #1689506 - BGP Routers misalignment
Fixed the alignment issue in Family Attributes column.

--- a/webroot/common/ui/scss/contrail.custom.scss
+++ b/webroot/common/ui/scss/contrail.custom.scss
@@ -2265,3 +2265,8 @@ div.stack-bar-chart-tooltip > .popover.popover-tooltip {
     margin-top: 1px;
     padding: 0px;
 }
+#bgp-grid .detail-block-list-content span.sec_label~hr{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: none;
+    }
